erDiagram
    USER {
        bigint id PK
        varchar username UK
        varchar password "Django password hash"
        varchar first_name
        varchar last_name
        varchar email
        varchar role "student or teacher"
        text biography "optional, up to 1000 characters"
        varchar photo "optional file path"
        boolean is_active
        boolean is_staff
        boolean is_superuser
        datetime date_joined
        datetime last_login "nullable"
    }
    USER ||--o{ STATUS_UPDATE : posts
    STATUS_UPDATE {
        bigint id PK
        bigint author_id FK
        varchar body "up to 500 characters"
        datetime created_at
    }
    USER ||--o{ COURSE : teaches
    USER ||--o{ ENROLMENT : joins
    COURSE ||--o{ ENROLMENT : has
    COURSE ||--o{ COURSE_MATERIAL : contains
    COURSE {
        bigint id PK
        bigint teacher_id FK
        varchar title
        text description
        datetime created_at
    }
    ENROLMENT {
        bigint id PK
        bigint course_id FK "unique with student_id"
        bigint student_id FK
        datetime enrolled_at
        boolean is_blocked
    }
    COURSE_MATERIAL {
        bigint id PK
        bigint course_id FK
        varchar title
        varchar file "stored file path"
        datetime uploaded_at
    }
    USER ||--o{ FEEDBACK : writes
    COURSE ||--o{ FEEDBACK : receives
    FEEDBACK {
        bigint id PK
        bigint course_id FK "unique with student_id"
        bigint student_id FK
        text body "up to 2000 characters"
        datetime updated_at
    }
    USER ||--o{ NOTIFICATION : receives
    COURSE ||--o{ NOTIFICATION : concerns
    COURSE_MATERIAL |o--o{ NOTIFICATION : announces
    NOTIFICATION {
        bigint id PK
        bigint recipient_id FK "unique with non-null material_id"
        bigint course_id FK
        bigint material_id FK "nullable for enrolment notices"
        varchar message
        boolean is_read
        datetime created_at
    }
    USER ||--o{ CHAT_MESSAGE : sends
    COURSE ||--o{ CHAT_MESSAGE : stores
    CHAT_MESSAGE {
        bigint id PK
        bigint course_id FK
        bigint author_id FK
        varchar body "up to 1000 characters"
        datetime created_at
    }
